# spike-mcp

./: .gitignore  .spike.toml.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-03-27-spike-mcp.md
docs/superpowers/specs/: 2026-03-27-spike-mcp-design.md
spike_mcp/: config.py  confluence.py  jira.py  server.py  templates.py
tests/: conftest.py  test_config.py  test_confluence_client.py  test_confluence_converters.py  test_jira_client.py  test_jira_converters.py  test_server.py  test_templates.py
