[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spike-mcp"
version = "0.1.0"
description = "MCP server for AI-powered spike research and Jira/Confluence automation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
spike-mcp = "spike_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
